# qtsplash

./: .gitignore  CMakeLists.txt  CPackConfig.cmake
resources/: CMakeLists.txt  qtsplash.qml
src/: CMakeLists.txt  qtsplash.cpp
